fix(doc): confort+ left spacing
removed left margin

--- a/scss/_orange-css.scss
+++ b/scss/_orange-css.scss
@@ -178,7 +178,6 @@ html {
     float: left;
     padding: .425rem 0 1rem;
     margin-top: 2.8rem;
-    margin-left: 1rem;
     font-weight: $brand-font-weight-bold;
     color: $brand-orange-white !important;
 
